--- a/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
+++ b/src/CombatAnalysis.WebApp/CombatAnalysis.WebApp.csproj
@@ -37,6 +37,7 @@
     <Folder Include="ClientApp\src\hocHelpers\" />
     <Folder Include="ClientApp\src\store\slicers\" />
     <Folder Include="ClientApp\src\styles\common\" />
+    <Folder Include="ClientApp\src\styles\identity\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
