--- a/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.ChatApi/appsettings.Development.json
@@ -10,12 +10,12 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "IdentityServer": "https://localhost:7064",
+    "IdentityServer": "https://localhost:7064/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Audience": "client1"
   },
   "Identity": {
-    "Server": "https://localhost:7064"
+    "Server": "https://localhost:7064/"
   },
   "Client": {
     "ClientId": "client1",
