--- a/src/API/CombatAnalysis.UserApi/appsettings.Development.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.Development.json
@@ -9,12 +9,12 @@
     "DataProcessingType": "StoredProcedure"
   },
   "Authentication": {
-    "Authority": "https://localhost:7064",
+    "Authority": "https://localhost:7064/",
     "IssuerSigningKey": "aFo/P+0M8TRKhjkIhjR1+1Y/b77eSl9Ewdj2e3hSxRQ=",
     "Audience": "client1"
   },
   "Identity": {
-    "Server": "https://localhost:7064"
+    "Server": "https://localhost:7064/"
   },
   "Client": {
     "ClientId": "client1",
